myCSU/4.10/documentation/devices/e7_0r05c05052051.md
# e7_0r05c05052051

## Table of Contents

- [Management](#management)
  - [Management Interfaces](#management-interfaces)
  - [IP Name Servers](#ip-name-servers)
  - [NTP](#ntp)
  - [Management API HTTP](#management-api-http)
- [Authentication](#authentication)
  - [Local Users](#local-users)
- [Monitoring](#monitoring)
  - [TerminAttr Daemon](#terminattr-daemon)
  - [Logging](#logging)
  - [SNMP](#snmp)
- [MLAG](#mlag)
  - [MLAG Summary](#mlag-summary)
  - [MLAG Device Configuration](#mlag-device-configuration)
- [Spanning Tree](#spanning-tree)
  - [Spanning Tree Summary](#spanning-tree-summary)
  - [Spanning Tree Device Configuration](#spanning-tree-device-configuration)
- [Internal VLAN Allocation Policy](#internal-vlan-allocation-policy)
  - [Internal VLAN Allocation Policy Summary](#internal-vlan-allocation-policy-summary)
  - [Internal VLAN Allocation Policy Device Configuration](#internal-vlan-allocation-policy-device-configuration)
- [VLANs](#vlans)
  - [VLANs Summary](#vlans-summary)
  - [VLANs Device Configuration](#vlans-device-configuration)
- [Interfaces](#interfaces)
  - [Ethernet Interfaces](#ethernet-interfaces)
  - [Port-Channel Interfaces](#port-channel-interfaces)
  - [VLAN Interfaces](#vlan-interfaces)
- [Routing](#routing)
  - [Service Routing Protocols Model](#service-routing-protocols-model)
  - [IP Routing](#ip-routing)
  - [IPv6 Routing](#ipv6-routing)
  - [Static Routes](#static-routes)
- [Multicast](#multicast)
  - [IP IGMP Snooping](#ip-igmp-snooping)
- [VRF Instances](#vrf-instances)
  - [VRF Instances Summary](#vrf-instances-summary)
  - [VRF Instances Device Configuration](#vrf-instances-device-configuration)

## Management

### Management Interfaces

#### Management Interfaces Summary

##### IPv4

| Management Interface | Description | Type | VRF | IP Address | Gateway |
| -------------------- | ----------- | ---- | --- | ---------- | ------- |
| Management1 | oob_management | oob | MGMT | 129.82.52.51/24 | 129.82.52.1 |

##### IPv6

| Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
| -------------------- | ----------- | ---- | --- | ------------ | ------------ |
| Management1 | oob_management | oob | MGMT | - | - |

#### Management Interfaces Device Configuration

```eos
!
interface Management1
   description oob_management
   no shutdown
   vrf MGMT
   ip address 129.82.52.51/24
```

### IP Name Servers

#### IP Name Servers Summary

| Name Server | VRF | Priority |
| ----------- | --- | -------- |
| 129.82.103.93 | MGMT | - |
| 129.82.103.91 | MGMT | - |

#### IP Name Servers Device Configuration

```eos
ip name-server vrf MGMT 129.82.103.91
ip name-server vrf MGMT 129.82.103.93
```

### NTP

#### NTP Summary

##### NTP Local Interface

| Interface | VRF |
| --------- | --- |
| Management1 | MGMT |

##### NTP Servers

| Server | VRF | Preferred | Burst | iBurst | Version | Min Poll | Max Poll | Local-interface | Key |
| ------ | --- | --------- | ----- | ------ | ------- | -------- | -------- | --------------- | --- |
| 129.82.100.11 | MGMT | - | - | - | - | - | - | - | - |
| 129.82.100.12 | MGMT | - | - | - | - | - | - | - | - |

#### NTP Device Configuration

```eos
!
ntp local-interface vrf MGMT Management1
ntp server vrf MGMT 129.82.100.11
ntp server vrf MGMT 129.82.100.12
```

### Management API HTTP

#### Management API HTTP Summary

| HTTP | HTTPS | Default Services |
| ---- | ----- | ---------------- |
| False | True | - |

#### Management API VRF Access

| VRF Name | IPv4 ACL | IPv6 ACL |
| -------- | -------- | -------- |
| MGMT | - | - |

#### Management API HTTP Device Configuration

```eos
!
management api http-commands
   protocol https
   no shutdown
   !
   vrf MGMT
      no shutdown
```

## Authentication

### Local Users

#### Local Users Summary

| User | Privilege | Role | Disabled | Shell |
| ---- | --------- | ---- | -------- | ----- |
| admin | 15 | network-admin | False | - |
| ansible | 15 | network-admin | False | - |

#### Local Users Device Configuration

```eos
!
username admin privilege 15 role network-admin nopassword
username ansible privilege 15 role network-admin secret sha512 <removed>
```

## Monitoring

### TerminAttr Daemon

#### TerminAttr Daemon Summary

| CV Compression | CloudVision Servers | VRF | Authentication | Smash Excludes | Ingest Exclude | Bypass AAA |
| -------------- | ------------------- | --- | -------------- | -------------- | -------------- | ---------- |
| gzip | apiserver.arista.io:443 | MGMT | token-secure,/tmp/cv-onboarding-token | ale,flexCounter,hardware,kni,pulse,strata | /Sysdb/cell/1/agent,/Sysdb/cell/2/agent | True |

#### TerminAttr Daemon Device Configuration

```eos
!
daemon TerminAttr
   exec /usr/bin/TerminAttr -cvaddr=apiserver.arista.io:443 -cvauth=token-secure,/tmp/cv-onboarding-token -cvvrf=MGMT -disableaaa -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
   no shutdown
```

### Logging

#### Logging Servers and Features Summary

| Type | Level |
| -----| ----- |

| VRF | Source Interface |
| --- | ---------------- |
| MGMT | Management1 |

| VRF | Hosts | Ports | Protocol |
| --- | ----- | ----- | -------- |
| MGMT | 129.82.111.172 | Default | UDP |

#### Logging Servers and Features Device Configuration

```eos
!
logging vrf MGMT host 129.82.111.172
logging vrf MGMT source-interface Management1
```

### SNMP

#### SNMP Configuration Summary

| Contact | Location | SNMP Traps | State |
| ------- | -------- | ---------- | ----- |
| noc@colostate.edu | - | All | Disabled |

#### SNMP Hosts Configuration

| Host | VRF | Community | Username | Authentication level | SNMP Version |
| ---- |---- | --------- | -------- | -------------------- | ------------ |
| 10.100.201.199 | MGMT | <removed> | - | - | 2c |

#### SNMP Communities

| Community | Access | Access List IPv4 | Access List IPv6 | View |
| --------- | ------ | ---------------- | ---------------- | ---- |
| <removed> | ro | - | - | - |

#### SNMP Device Configuration

```eos
!
snmp-server contact noc@colostate.edu
snmp-server community <removed> ro
snmp-server host 10.100.201.199 vrf MGMT version 2c <removed>
```

## MLAG

### MLAG Summary

| Domain-id | Local-interface | Peer-address | Peer-link |
| --------- | --------------- | ------------ | --------- |
| MLAG | Vlan4094 | 192.168.0.1 | Port-Channel441 |

Dual primary detection is disabled.

### MLAG Device Configuration

```eos
!
mlag configuration
   domain-id MLAG
   local-interface Vlan4094
   peer-address 192.168.0.1
   peer-link Port-Channel441
   reload-delay mlag 300
   reload-delay non-mlag 330
```

## Spanning Tree

### Spanning Tree Summary

STP mode: **rapid-pvst**

#### Rapid-PVST Instance and Priority

| Instance(s) | Priority |
| -------- | -------- |
| 1-4094 | 32768 |

#### Global Spanning-Tree Settings

- Spanning Tree disabled for VLANs: **4094**

### Spanning Tree Device Configuration

```eos
!
spanning-tree mode rapid-pvst
no spanning-tree vlan-id 4094
spanning-tree vlan-id 1-4094 priority 32768
```

## Internal VLAN Allocation Policy

### Internal VLAN Allocation Policy Summary

| Policy Allocation | Range Beginning | Range Ending |
| ------------------| --------------- | ------------ |
| ascending | 1006 | 1199 |

### Internal VLAN Allocation Policy Device Configuration

```eos
!
vlan internal order ascending range 1006 1199
```

## VLANs

### VLANs Summary

| VLAN ID | Name | Trunk Groups |
| ------- | ---- | ------------ |
| 553 | Windows_Unix_MGMT | - |
| 592 | Security_Cameras | - |
| 1000 | san_0 | - |
| 1001 | san_1 | - |
| 4094 | MLAG_PEER | MLAG |

### VLANs Device Configuration

```eos
!
vlan 553
   name Windows_Unix_MGMT
!
vlan 592
   name Security_Cameras
!
vlan 1000
   name san_0
!
vlan 1001
   name san_1
!
vlan 4094
   name MLAG_PEER
   trunk group MLAG
```

## Interfaces

### Ethernet Interfaces

#### Ethernet Interfaces Summary

##### L2

| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
| --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
| Ethernet1 |  UNIX_R5C7U1-2_CAMSYSPIVOT1_MGMT0 | access | 553 | - | - | - |
| Ethernet2 |  UNIX_R5C7U1-2_CAMSYSPIVOT1_San0 | access | 1000 | - | - | - |
| Ethernet3 |  UNIX_R5C7U1-2_CAMSYSPIVOT1_App0 | access | 592 | - | - | - |
| Ethernet4 |  UNIX_R5C7U3-4_CAMSYSPIVOT2_MGMT0 | access | 553 | - | - | - |
| Ethernet5 |  UNIX_R5C7U3-4_CAMSYSPIVOT2_San0 | access | 1000 | - | - | - |
| Ethernet6 |  UNIX_R5C7U3-4_CAMSYSPIVOT2_App0 | access | 592 | - | - | - |
| Ethernet7 |  UNIX_R5C7U4-5_CAMSYSPIVOT3_MGMT0 | access | 553 | - | - | - |
| Ethernet8 |  UNIX_R5C7U4-5_CAMSYSPIVOT3_San0 | access | 1000 | - | - | - |
| Ethernet9 |  UNIX_R5C7U4-5_CAMSYSPIVOT3_App0 | access | 592 | - | - | - |
| Ethernet10 |  UNIX_R5C7U6-7_CAMSYSPIVOT4_MGMT0 | access | 553 | - | - | - |
| Ethernet11 |  UNIX_R5C7U6-7_CAMSYSPIVOT4_San0 | access | 1000 | - | - | - |
| Ethernet12 |  UNIX_R5C7U6-7_CAMSYSPIVOT4_App0 | access | 592 | - | - | - |
| Ethernet13 |  UNIX_R5C7U8-9_CAMSYSPIVOT5_MGMT0 | access | 553 | - | - | - |
| Ethernet14 |  UNIX_R5C7U8-9_CAMSYSPIVOT5_San0 | access | 1000 | - | - | - |
| Ethernet15 |  UNIX_R5C7U8-9_CAMSYSPIVOT5_App0 | access | 592 | - | - | - |
| Ethernet16 |  UNIX_R5C7U10-11_CAMSYSPIVOT6_MGMT0 | access | 553 | - | - | - |
| Ethernet17 |  UNIX_R5C7U10-11_CAMSYSPIVOT6_San0 | access | 1000 | - | - | - |
| Ethernet18 |  UNIX_R5C7U10-11_CAMSYSPIVOT6_App0 | access | 592 | - | - | - |
| Ethernet19 |  UNIX_R5C7U12-13_CAMSYSPIVOT7_MGMT0 | access | 553 | - | - | - |
| Ethernet20 |  UNIX_R5C7U12-13_CAMSYSPIVOT7_San0 | access | 1000 | - | - | - |
| Ethernet21 |  UNIX_R5C7U12-13_CAMSYSPIVOT7_App0 | access | 592 | - | - | - |
| Ethernet22 |  UNIX_R5C7U14-15_CAMSYSPIVOT8_MGMT0 | access | 553 | - | - | - |
| Ethernet23 |  UNIX_R5C7U14-15_CAMSYSPIVOT8_San0 | access | 1000 | - | - | - |
| Ethernet24 |  UNIX_R5C7U14-15_CAMSYSPIVOT8_App0 | access | 592 | - | - | - |
| Ethernet25 |  UNIX_R5C7U16-17_CAMSYSPIVOT9_MGMT0 | access | 553 | - | - | - |
| Ethernet26 |  UNIX_R5C7U16-17_CAMSYSPIVOT9_San0 | access | 1000 | - | - | - |
| Ethernet27 |  UNIX_R5C7U16-17_CAMSYSPIVOT9_App0 | access | 592 | - | - | - |
| Ethernet28 |  UNIX_R5C7U18-19_CAMSYSPIVOT10_MGMT0 | access | 553 | - | - | - |
| Ethernet29 |  UNIX_R5C7U18-19_CAMSYSPIVOT10_San0 | access | 1000 | - | - | - |
| Ethernet30 |  UNIX_R5C7U18-19_CAMSYSPIVOT10_App0 | access | 592 | - | - | - |
| Ethernet44/1 | MLAG_PEER_e7_0r05c05052052_Ethernet44/1 | *trunk | *- | *- | *['MLAG'] | 441 |
| Ethernet46/1 | level1_spine_int | *trunk | *- | *- | *- | 461 |

*Inherited from Port-Channel Interface

#### Ethernet Interfaces Device Configuration

```eos
!
interface Ethernet1
   description UNIX_R5C7U1-2_CAMSYSPIVOT1_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet2
   description UNIX_R5C7U1-2_CAMSYSPIVOT1_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet3
   description UNIX_R5C7U1-2_CAMSYSPIVOT1_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet4
   description UNIX_R5C7U3-4_CAMSYSPIVOT2_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet5
   description UNIX_R5C7U3-4_CAMSYSPIVOT2_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet6
   description UNIX_R5C7U3-4_CAMSYSPIVOT2_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet7
   description UNIX_R5C7U4-5_CAMSYSPIVOT3_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet8
   description UNIX_R5C7U4-5_CAMSYSPIVOT3_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet9
   description UNIX_R5C7U4-5_CAMSYSPIVOT3_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet10
   description UNIX_R5C7U6-7_CAMSYSPIVOT4_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet11
   description UNIX_R5C7U6-7_CAMSYSPIVOT4_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet12
   description UNIX_R5C7U6-7_CAMSYSPIVOT4_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet13
   description UNIX_R5C7U8-9_CAMSYSPIVOT5_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet14
   description UNIX_R5C7U8-9_CAMSYSPIVOT5_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet15
   description UNIX_R5C7U8-9_CAMSYSPIVOT5_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet16
   description UNIX_R5C7U10-11_CAMSYSPIVOT6_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet17
   description UNIX_R5C7U10-11_CAMSYSPIVOT6_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet18
   description UNIX_R5C7U10-11_CAMSYSPIVOT6_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet19
   description UNIX_R5C7U12-13_CAMSYSPIVOT7_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet20
   description UNIX_R5C7U12-13_CAMSYSPIVOT7_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet21
   description UNIX_R5C7U12-13_CAMSYSPIVOT7_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet22
   description UNIX_R5C7U14-15_CAMSYSPIVOT8_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet23
   description UNIX_R5C7U14-15_CAMSYSPIVOT8_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet24
   description UNIX_R5C7U14-15_CAMSYSPIVOT8_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet25
   description UNIX_R5C7U16-17_CAMSYSPIVOT9_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet26
   description UNIX_R5C7U16-17_CAMSYSPIVOT9_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet27
   description UNIX_R5C7U16-17_CAMSYSPIVOT9_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet28
   description UNIX_R5C7U18-19_CAMSYSPIVOT10_MGMT0
   no shutdown
   switchport access vlan 553
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet29
   description UNIX_R5C7U18-19_CAMSYSPIVOT10_San0
   no shutdown
   switchport access vlan 1000
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet30
   description UNIX_R5C7U18-19_CAMSYSPIVOT10_App0
   no shutdown
   switchport access vlan 592
   switchport mode access
   switchport
   spanning-tree portfast
   spanning-tree bpduguard enable
!
interface Ethernet44/1
   description MLAG_PEER_e7_0r05c05052052_Ethernet44/1
   no shutdown
   channel-group 441 mode active
!
interface Ethernet46/1
   description level1_spine_int
   no shutdown
   channel-group 461 mode active
```

### Port-Channel Interfaces

#### Port-Channel Interfaces Summary

##### L2

| Interface | Description | Type | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
| --------- | ----------- | ---- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
| Port-Channel441 | MLAG_PEER_e7_0r05c05052052_Po441 | switched | trunk | - | - | ['MLAG'] | - | - | - | - |
| Port-Channel461 | level1_spine_int | switched | trunk | - | - | - | - | - | 461 | - |

#### Port-Channel Interfaces Device Configuration

```eos
!
interface Port-Channel441
   description MLAG_PEER_e7_0r05c05052052_Po441
   no shutdown
   switchport
   switchport mode trunk
   switchport trunk group MLAG
!
interface Port-Channel461
   description level1_spine_int
   no shutdown
   switchport
   switchport mode trunk
   mlag 461
```

### VLAN Interfaces

#### VLAN Interfaces Summary

| Interface | Description | VRF |  MTU | Shutdown |
| --------- | ----------- | --- | ---- | -------- |
| Vlan4094 | MLAG_PEER | default | 9214 | False |

##### IPv4

| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | VRRP | ACL In | ACL Out |
| --------- | --- | ---------- | ------------------ | ------------------------- | ---- | ------ | ------- |
| Vlan4094 |  default  |  192.168.0.0/31  |  -  |  -  |  -  |  -  |  -  |

#### VLAN Interfaces Device Configuration

```eos
!
interface Vlan4094
   description MLAG_PEER
   no shutdown
   mtu 9214
   no autostate
   ip address 192.168.0.0/31
```

## Routing

### Service Routing Protocols Model

Multi agent routing protocol model enabled

```eos
!
service routing protocols model multi-agent
```

### IP Routing

#### IP Routing Summary

| VRF | Routing Enabled |
| --- | --------------- |
| default | False |
| MGMT | True |

#### IP Routing Device Configuration

```eos
ip routing vrf MGMT
```

### IPv6 Routing

#### IPv6 Routing Summary

| VRF | Routing Enabled |
| --- | --------------- |
| default | False |
| MGMT | false |

### Static Routes

#### Static Routes Summary

| VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
| --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
| MGMT | 0.0.0.0/0 | 129.82.52.1 | - | 1 | - | - | - |

#### Static Routes Device Configuration

```eos
!
ip route vrf MGMT 0.0.0.0/0 129.82.52.1
```

## Multicast

### IP IGMP Snooping

#### IP IGMP Snooping Summary

| IGMP Snooping | Fast Leave | Interface Restart Query | Proxy | Restart Query Interval | Robustness Variable |
| ------------- | ---------- | ----------------------- | ----- | ---------------------- | ------------------- |
| Enabled | - | - | - | - | - |

#### IP IGMP Snooping Device Configuration

```eos
```

## VRF Instances

### VRF Instances Summary

| VRF Name | IP Routing |
| -------- | ---------- |
| MGMT | enabled |

### VRF Instances Device Configuration

```eos
!
vrf instance MGMT
```
